<resources>
    <string name="app_name">RefPRO Mobile</string>

    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>

    <string name="action_settings">Settings</string>
    <string name="action_english">English</string>
    <string name="action_bulgarian">Bulgarian</string>
    <string name="action_german">German</string>
    <string name="title_activity_login">Sign in to RefPRO</string>

    <string name="nav_menu">Menu</string>
    <string name="nav_create">Create</string>

    <!-- Strings related to MenuActivity -->
    <string name="fixtures">Upcoming fixtures</string>

    <!-- Strings related to CreateActivity -->
    <string name="add_match">Add match</string>
    <string name="create_match">Create</string>

    <string name="competition">Competition (1-100)</string>
    <string name="venue">Venue (1-50)</string>
    <string name="date">Date (YYYY-MM-DD)</string>
    <string name="time">Time(HH:MM)</string>
    <string name="home">Home (1-30)</string>
    <string name="away">Away (1-30)</string>
    <string name="homeabbr">Home abbr. (1-5)</string>
    <string name="awayabbr">Away abbr. (1-5)</string>
    <string name="players">№ of players (8-15)</string>
    <string name="subs">№ of subs (3-12)</string>
    <string name="length">Half length(30m - 55m)</string>

    <string name="create_error">Wrong format!!!</string>


    <string name="create_success">New match created successfully!!!</string>
    <string name="error">Something went wrong!!!</string>

    <!-- Strings related to MatchInfoActivity -->
    <string name="home_players">Home players</string>
    <string name="away_players">Away players</string>
    <string name="home_subs">Home substitutes</string>
    <string name="away_subs">Away substitutes</string>

    <string name="players_number">Number(10)</string>
    <string name="players_name_form">Name(Harry Kane) </string>

    <string name="empty_field">Empty field!!! </string>

    <string name="start_match">Start match </string>


    <!-- Strings related to AlertDialog -->

    <string name="open">Open </string>
    <string name="edit">Edit </string>
    <string name="delete">Delete </string>

    <string name="options">Match Options </string>
    <string name="alert_text">Do you want to Open match information or to Delete this match? </string>
    <string name="delete_success">Match deleted successfully!!! </string>
    <string name="fcmToken_error">Unable to send device token </string>



    <!-- Strings related to login -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="refpro">RefPRO</string>
    <string name="ref_like_a_pro">Ref like a PRO!</string>
    <string name="add_player">Add player</string>


    <string name="match_name_template">match_name</string>
    <string name="match_date_template">match_date</string>
    <string name="match_time_template">match_time</string>
    <string name="match_teams_template">home_away</string>


    <string-array name="teams">
        <item>Levski Sofia</item>
        <item>CSKA-Sofia</item>
        <item>Slavia Sofia</item>
    </string-array>
</resources>
