<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <TextView
        android:id="@+id/textView2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_match"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/competition"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/textView2"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/competition"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <EditText
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:layout_below="@+id/venue"
        android:layout_toEndOf="@+id/date" />

    <EditText
        android:id="@+id/date"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:layout_below="@+id/venue"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/venue"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/venue"
        android:inputType="textPersonName"
        android:layout_below="@+id/competition"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/home"
        android:inputType="textPersonName"
        android:layout_above="@+id/away"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/homeabbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/home"
        android:layout_alignParentEnd="true"
        android:layout_toEndOf="@+id/home"
        android:ems="10"
        android:hint="@string/homeabbr"
        android:inputType="textPersonName"
        android:textAlignment="viewStart" />

    <EditText
        android:id="@+id/away"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/away"
        android:inputType="textPersonName"
        android:layout_centerVertical="true"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/awayabbr"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBaseline="@+id/away"
        android:layout_alignBottom="@+id/away"
        android:layout_toEndOf="@+id/away"
        android:ems="10"
        android:hint="@string/awayabbr"
        android:inputType="textPersonName"
        android:textAlignment="viewStart" />

    <Button
        android:id="@+id/createMatch"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:text="@string/create_match" />

    <EditText
        android:id="@+id/players"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/players"
        android:inputType="number"
        android:layout_above="@+id/subs"
        android:layout_alignEnd="@+id/time" />

    <EditText
        android:id="@+id/subs"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/subs"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:layout_above="@+id/lenght"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/lenght"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/length"
        android:inputType="number"
        android:textAlignment="viewStart"
        android:layout_above="@+id/createMatch"
        android:layout_alignParentStart="true" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/lenght"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignParentBottom="true" />

</RelativeLayout>