<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    >

    <TextView
        android:id="@+id/addMatchText"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:text="@string/add_match"
        android:textAlignment="center"
        android:textAllCaps="false"
        android:textColor="#000000"
        android:textSize="22dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/competitionForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentStart="true"
        android:layout_below="@+id/addMatchText"
        android:layout_marginTop="25dp"
        android:ems="10"
        android:hint="@string/competition"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false"
        android:text="Premier League" />

    <EditText
        android:id="@+id/timeForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/time"
        android:inputType="time"
        android:layout_below="@+id/venueForm"
        android:layout_toEndOf="@+id/dateForm"
        android:text="18:00"/>

    <EditText
        android:id="@+id/dateForm"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/date"
        android:inputType="date"
        android:layout_below="@+id/venueForm"
        android:layout_alignParentStart="true"
        android:text="2018-11-11"
        />

    <AutoCompleteTextView
        android:id="@+id/home"
        android:hint="@string/home"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/timeForm"
        android:layout_alignEnd="@+id/progressBar"
        android:layout_marginTop="33dp"
        />

    <AutoCompleteTextView
        android:id="@+id/awayTeamForm"
        android:hint="@string/away"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:inputType="textPersonName"
        android:ems="10"
        android:layout_below="@+id/home"
        android:layout_alignParentStart="true" />

    <EditText
        android:id="@+id/venueForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:ems="10"
        android:hint="@string/venue"
        android:inputType="textPersonName"
        android:layout_below="@+id/competitionForm"
        android:layout_alignParentStart="true"
        android:text="Vasil Levski Stadium"/>

    <Button
        android:id="@+id/createMatchButton"
        android:layout_width="match_parent"
        android:layout_height="58dp"
        android:layout_alignParentBottom="true"
        android:layout_centerHorizontal="true"
        android:background="@drawable/create_button"
        android:scaleType="fitXY"
        android:src="@drawable/create_button"
        android:text="" />

    <EditText
        android:id="@+id/halfLengthForm"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_alignParentStart="true"
        android:layout_marginBottom="106dp"
        android:ems="10"
        android:hint="@string/length"
        android:inputType="number"
        android:text="45"
        android:textAlignment="viewStart" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/halfLengthForm"
        android:layout_centerHorizontal="true"
        android:visibility="invisible"
        android:layout_alignParentBottom="true"
        />

</RelativeLayout>