<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".activities.MainActivity">



    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="436dp"
        android:layout_weight="0.96">

        <LinearLayout
            android:id="@+id/info_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:weightSum="1">

            <ListView
                android:id="@+id/home_players_assigned"
                android:layout_width="match_parent"
                android:layout_height="200px"
                android:background="#f91203"

                />

            <TextView
                android:id="@+id/matchNameInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_centerHorizontal="true"

                android:text="@string/match_name_template"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="36dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/dateInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/matchNameInformation"
                android:layout_centerHorizontal="true"
                android:text="@string/match_date_template"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/timeInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignStart="@+id/dateInformation"
                android:layout_below="@+id/dateInformation"
                android:layout_marginTop="8dp"
                android:text="@string/match_time_template"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="22dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/teamsInformation"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/timeInformation"
                android:layout_centerHorizontal="true"
                android:layout_marginTop="62dp"
                android:text="@string/match_teams_template"
                android:textAlignment="center"
                android:textColor="#000000"
                android:textSize="30dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/playerTypeText"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="60dp"
                android:text="@string/home_players"
                android:textAlignment="viewStart"
                android:textColor="#000000"
                android:textSize="24dp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/playerNumberForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                android:hint="@string/players_number" />

            <EditText
                android:id="@+id/playerNameForm"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="textPersonName"
                android:hint="@string/players_name_form" />

            <Button
                android:id="@+id/sendButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/start_match" />

            <Button
                android:id="@+id/addPlayerButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/add_player" />

        </LinearLayout>
    </ScrollView>

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_weight="0.96"
        android:visibility="gone" />


    <FrameLayout
        android:id="@+id/content_frame"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />


    <ListView android:id="@+id/right_drawer"
        android:layout_width="240dp"
        android:layout_height="match_parent"
        android:layout_gravity="end"
        android:choiceMode="singleChoice"
        android:divider="@android:color/transparent"
        android:dividerHeight="0dp"
        android:background="#FFFFFF">


    </ListView>





</android.support.v4.widget.DrawerLayout>