<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.elsys.refpro.refpromobile.activities.LoginActivity">

    <ImageView
        android:id="@+id/background"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:background="@drawable/phone_bg"
        android:alpha="0.6"
        android:layout_alignParentStart="true" />

    <ImageView
        android:id="@+id/logo"
        android:layout_width="100dp"
        android:layout_height="100dp"
        app:srcCompat="@drawable/logo"
        tools:layout_editor_absoluteX="107dp"
        tools:layout_editor_absoluteY="45dp"
        android:layout_marginTop="71dp"
        android:layout_alignParentTop="true"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/title"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/refpro"
        android:textSize="36dp"
        android:textStyle="bold"
        android:textColor="#000000"
        android:layout_below="@+id/logo"
        android:layout_centerHorizontal="true" />

    <TextView
        android:id="@+id/smallTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/title"
        android:layout_centerHorizontal="true"
        android:text="@string/ref_like_a_pro"
        android:textColor="#000000"
        android:textSize="14dp"
        android:textStyle="bold" />

    <EditText
        android:id="@+id/usernameField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/passwordField"
        android:layout_alignStart="@+id/passwordField"
        android:layout_marginBottom="43dp"
        android:ems="10"
        android:hint="@string/prompt_username"
        android:inputType="textPersonName"
        android:selectAllOnFocus="false"
        android:singleLine="false" />

    <EditText
        android:id="@+id/passwordField"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="98dp"
        android:ems="10"
        android:inputType="textPassword"
        android:hint="@string/prompt_password"
        android:maxLines="1"
        android:layout_below="@+id/smallTitle"
        android:layout_centerHorizontal="true" />


    <Button
        android:id="@+id/signInButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignStart="@+id/smallTitle"
        android:layout_below="@+id/passwordField"
        android:layout_marginTop="31dp"
        android:text="@string/action_sign_in_short" />

    <ProgressBar
        android:id="@+id/progressBar"
        style="@style/Widget.AppCompat.ProgressBar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignTop="@+id/signInButton"
        android:layout_centerHorizontal="true"
        android:visibility="invisible" />

</RelativeLayout>
